feat: 검사 결과 목록 조회 기능 개선