@@ -9,13 +9,11 @@ import com.example.classicjeans.repository.DementiaDataRepository;
 import com.example.classicjeans.repository.FamilyInfoRepository;
 import com.example.classicjeans.repository.QuestionnaireDataRepository;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.*;
 import org.springframework.stereotype.Service;
 
-import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static com.example.classicjeans.util.SecurityUtil.getLoggedInUser;
@@ -38,50 +36,56 @@ public class HealthReportService {
     }
 
     // 접속 중인 유저(본인 + 가족)의 검사 결과 목록 조회
-    public Page<HealthReportResponse> getHealthReportList(Pageable pageable, String target) {
+    public Page<HealthReportResponse> getHealthReportList(int page, int size, String target) {
         Long userId = getLoggedInUser().getId();
         Users user = usersService.findUserById(userId);
         List<FamilyInfo> familyInfos = familyInfoRepository.findByUserId(user);
 
-        // 본인 및 가족의 모든 QuestionnaireData 및 DementiaData 조회 (페이지네이션 적용)
-        Page<QuestionnaireData> questionnaireDataPage;
-        Page<DementiaData> dementiaDataPage;
-        switch (target) {
-            case "user" -> {
-                questionnaireDataPage = questionnaireDataRepository.findByUserId(user, pageable);
-                dementiaDataPage = dementiaDataRepository.findByUserId(user, pageable);
-            }
-            case "family" -> {
-                Long familyId = Long.parseLong(target);
-                FamilyInfo selectedFamilyInfo = familyInfoService.findFamily(familyId);
-                questionnaireDataPage = questionnaireDataRepository.findByFamilyId(selectedFamilyInfo, pageable);
-                dementiaDataPage = dementiaDataRepository.findByFamilyId(selectedFamilyInfo, pageable);
-            }
-            default -> {
-                questionnaireDataPage = questionnaireDataRepository.findByUserOrFamily(user, familyInfos, pageable);
-                dementiaDataPage = dementiaDataRepository.findByUserOrFamily(user, familyInfos, pageable);
-            }
+        List<QuestionnaireData> questionnaireDataList;
+        List<DementiaData> dementiaDataList;
+
+        if (target.equals("user")) {
+            questionnaireDataList = questionnaireDataRepository.findByUserId(user);
+            dementiaDataList = dementiaDataRepository.findByUserId(user);
+        } else if (target.equals("all")) {
+            questionnaireDataList = questionnaireDataRepository.findByUserOrFamily(user, familyInfos);
+            dementiaDataList = dementiaDataRepository.findByUserOrFamily(user, familyInfos);
+        } else {
+            Long familyId = Long.parseLong(target);
+            FamilyInfo selectedFamilyInfo = familyInfoService.findFamily(familyId);
+            questionnaireDataList = questionnaireDataRepository.findByFamilyId(selectedFamilyInfo);
+            dementiaDataList = dementiaDataRepository.findByFamilyId(selectedFamilyInfo);
         }
 
-        // HealthReportResponse로 변환
+        // HealthReportResponse로 변환 후 날짜 최신순으로 정렬
         List<HealthReportResponse> summaries = Stream.concat(
-                        questionnaireDataPage.getContent().stream().map(data -> new HealthReportResponse(
+                        questionnaireDataList.stream().map(data -> new HealthReportResponse(
                                 "Questionnaire",
-                                (data.getFamilyId() != null ? data.getFamilyId().getId() : data.getUserId().getId()),
+                                data.getId(),
                                 (data.getFamilyId() != null ? data.getFamilyId().getName() : data.getUserId().getName()),
                                 data.getDate()
                         )),
-                        dementiaDataPage.getContent().stream().map(data -> new HealthReportResponse(
+                        dementiaDataList.stream().map(data -> new HealthReportResponse(
                                 "Dementia",
-                                (data.getFamilyId() != null ? data.getFamilyId().getId() : data.getUserId().getId()),
+                                data.getId(),
                                 (data.getFamilyId() != null ? data.getFamilyId().getName() : data.getUserId().getName()),
                                 data.getDate()
                         ))
-                ).sorted(Comparator.comparing(HealthReportResponse::getDate).reversed())
-                .toList();
+                )
+                .sorted((r1, r2) -> r2.getDate().compareTo(r1.getDate()))
+                .collect(Collectors.toList());
 
-        return new PageImpl<>(summaries, pageable, questionnaireDataPage.getTotalElements() + dementiaDataPage.getTotalElements());
+        // 전체 요소 수를 계산
+        long totalElements = summaries.size();
+
+        // 페이지네이션 처리된 결과를 균등하게 분할하여 반환
+        int start = Math.min(page * size, summaries.size());
+        int end = Math.min((start + size), summaries.size());
+        List<HealthReportResponse> pagedSummaries = summaries.subList(start, end);
+
+        return new PageImpl<>(pagedSummaries, PageRequest.of(page, size), totalElements);
     }
+
 
     // 단건 검사 기록 조회
     public Object getHealthReportById(Long reportId, String reportType) {
